--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "express": "^5.1.0",
     "mongodb": "^6.20.0"
   }
